Index html changes
Gas cost to Material cost enchange .

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <input id="cost7" placeholder="هزینه تزریق">
         <input id="cost8" placeholder="هزینه آب">
         <input id="cost9" placeholder="هزینه برق">
-        <input id="cost10" placeholder="هزینه گاز">
+        <input id="cost10" placeholder="هزینه مواد تزریق">
         <input id="cost11" placeholder="هزینه پسماند">
         <input id="cost12" placeholder="هزینه حمل‌ونقل">
         <input id="cost13" placeholder="هزینه اجاره">
