--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h2>فاکتور فروش</h2>
     <input id="buyerName" placeholder="نام خریدار">
     <input id="buyerPhone" placeholder="شماره تماس">
-    <input id="buyerCard" placeholder="شماره کارت">
+   <input id="buyerAddress" placeholder="آدرس خریدار">
     <table id="invoiceTable">
       <thead>
       <tr>
