--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
   <h1>مدیریت کارگاه RAMCO</h1>
   <nav>
-    <button onclick="showSection('cost')">برآورد هزینه</button>
+    <button id="first" onclick="showSection('cost')">برآورد هزینه</button>
     <button onclick="showSection('customers')">مشتری‌ها</button>
     <button onclick="showSection('inventory')">انبار</button>
     <button onclick="showSection('todo')">تودولیست</button>
-    <button onclick="showSection('invoice')">فاکتور</button>
+    <button id="last" onclick="showSection('invoice')">فاکتور</button>
   </nav>
 
   <!-- برآورد هزینه -->
