--- a/index.html
+++ b/index.html
@@ -23,20 +23,22 @@
   <section id="cost">
     <h2>برآورد هزینه کابل</h2>
     <div class="inputs">
-      <input id="cost1" placeholder="هزینه سیم کابل">
+      input id="cost1" placeholder="هزینه سیم کابل">
       <input id="cost2" placeholder="هزینه کارگر">
       <input id="cost3" placeholder="هزینه کانکتور USB">
-      <input id="cost4" placeholder="هزینه کانکتور Type-C">
-      <input id="cost5" placeholder="هزینه بسته‌بندی">
-      <input id="cost6" placeholder="هزینه لحیم">
-      <input id="cost7" placeholder="هزینه تزریق">
-      <input id="cost8" placeholder="هزینه آب">
-      <input id="cost9" placeholder="هزینه برق">
-      <input id="cost10" placeholder="هزینه مواد تزریق">
-      <input id="cost11" placeholder="هزینه پسماند">
-      <input id="cost12" placeholder="هزینه حمل‌ونقل">
-      <input id="cost13" placeholder="هزینه اجاره">
-      <input id="cost14" placeholder="هزینه خرابی کابل‌ها">
+      <input id="cost4" placeholder="هزینه کانکتور MICRO">
+      <input id="cost5" placeholder="هزینه کانکتور Type-C">
+      <input id="cost6" placeholder="هزینه بسته‌بندی">
+      <input id="cost7" placeholder="هزینه لحیم">
+      <input id="cost8" placeholder="هزینه تزریق">
+      <input id="cost9" placeholder="هزینه آب">
+      <input id="cost10" placeholder="هزینه برق">
+      <input id="cost11" placeholder="هزینه مواد تزریق">
+      <input id="cost12" placeholder="هزینه پسماند">
+      <input id="cost13" placeholder="هزینه حمل‌ونقل">
+      <input id="cost14" placeholder="هزینه اجاره">
+      <input id="cost15" placeholder="هزینه خرابی کابل‌ها">
+      <input id="cost16" placeholder="هزینه مواد تزریق">
     </div>
     <button onclick="calcCableCost()">محاسبه</button>
     <p id="result"></p>
