--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section id="cost">
     <h2>برآورد هزینه کابل</h2>
     <div class="inputs">
-      input id="cost1" placeholder="هزینه سیم کابل">
+      <input id="cost1" placeholder="هزینه سیم کابل">
       <input id="cost2" placeholder="هزینه کارگر">
       <input id="cost3" placeholder="هزینه کانکتور USB">
       <input id="cost4" placeholder="هزینه کانکتور MICRO">
