--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <!-- برآورد هزینه -->
   <section id="cost">
     <h2>برآورد هزینه کابل</h2>
-    <div class="inputs">
+    <span class="flexStyler">
       <input id="cost1" placeholder="هزینه سیم کابل">
       <input id="cost2" placeholder="هزینه کارگر">
       <input id="cost3" placeholder="هزینه کانکتور USB">
@@ -105,49 +105,57 @@
       <input id="cost16" placeholder="هزینه مواد تزریق">
       <input id="cost17" placeholder="هزینه کابل 4 رشته ">
       <input id="cost17" placeholder="هزینه کابل 5 رشته ">
-    </div>
-    <button onclick="calcCableCost()">محاسبه</button>
+      <button onclick="calcCableCost()">محاسبه</button>
+    </span>
+    
     <p id="result"></p>
   </section>
 
   <!-- مشتری‌ها -->
 <section id="customers" style="display:none;">
   <h2>مدیریت مشتری‌ها</h2>
-  <input id="customerFullName" placeholder="نام و نام خانوادگی">
-  <select id="customerType">
-    <option value="خریدار">خریدار</option>
-    <option value="فروشنده">فروشنده</option>
-  </select>
-  <input id="customerPhone" placeholder="شماره تماس">
-  <input id="customerAddress" placeholder="آدرس">
-  <input id="customerDebt" placeholder="بدهی (تومان)" type="number">
-  <button id="addCustomerBtn">ثبت مشتری</button>
+    <span class="flexStyler">
+      <input id="customerFullName" placeholder="نام و نام خانوادگی">
+    <select id="customerType">
+      <option value="خریدار">خریدار</option>
+      <option value="فروشنده">فروشنده</option>
+    </select>
+    <input id="customerPhone" placeholder="شماره تماس">
+    <input id="customerAddress" placeholder="آدرس">
+    <input id="customerDebt" placeholder="بدهی (تومان)" type="number">
+    <button id="addCustomerBtn">ثبت مشتری</button>
+  </span>
+  
   <ul id="customerList"></ul>
 </section>
 
   <!-- انبار -->
   <section id="inventory" style="display:none;">
     <h2>انبار</h2>
-    <input id="productName" placeholder="نام محصول">
-    <input id="productCount" placeholder="تعداد">
-    <input id="productPrice" placeholder="قیمت خرید">
-    <button onclick="addProduct()">افزودن</button>
+    <span class="flexStyler">
+      <input id="productName" placeholder="نام محصول">
+      <input id="productCount" placeholder="تعداد">
+      <input id="productPrice" placeholder="قیمت خرید">
+      <button onclick="addProduct()">افزودن</button>
+    </span>
     <ul id="productList"></ul>
   </section>
 
   <!-- تودولیست -->
   <section id="todo" style="display:none;">
     <h2>تودولیست</h2>
-    <input id="todoTask" placeholder="کار">
-    <input id="todoDate" type="date">
-    <button onclick="addTodo()">افزودن</button>
+    <span class="flexStyler">
+      <input id="todoTask" placeholder="کار">
+      <input id="todoDate" type="date">
+      <button onclick="addTodo()">افزودن</button>
+    </span>
     <ul id="todoList"></ul>
   </section>
 
   <!-- فاکتور -->
   <section id="invoice" style="display:none;">
     <h2>فاکتور فروش</h2>
-  <span id="factor_Input">
+  <span class="flexStyler">
         <input id="buyerName" placeholder="نام خریدار">
       <input id="buyerPhone" placeholder="شماره تماس">
     <input id="buyerAddress" placeholder="آدرس خریدار">
@@ -184,15 +192,20 @@
   </section>
 
   <section id="cheques" style="display: none;">
-  <h2>مدیریت چک‌ها</h2>
-  <input id="chequeNumber" placeholder="شماره چک">
-  <input id="chequeAmount" placeholder="مبلغ (تومان)" type="number">
-  <select id="chequeType">
-    <option value="دریافتی">دریافتی</option>
-    <option value="پرداختی">پرداختی</option>
-  </select>
-  <input id="chequePerson" placeholder="نام شخص">
-  <button onclick="addCheque()">ثبت چک</button>
+      <h2>مدیریت چک‌ها</h2>
+    <span class="flexStyler">
+      <input id="chequeNumber" placeholder="شماره چک">
+      <input id="chequeAmount" placeholder="مبلغ (تومان)" type="number">
+
+      <select id="chequeType">
+        <option value="دریافتی">دریافتی</option>
+        <option value="پرداختی">پرداختی</option>
+      </select>
+
+      <input id="chequePerson" placeholder="نام شخص">
+      <button onclick="addCheque()">ثبت چک</button>
+    </span>
+
   <ul id="chequeList"></ul>
 </section>
 
@@ -203,12 +216,13 @@
   <h2>تاریخچه پرداختی‌ها</h2>
 
   <!-- بخش دستی -->
-  <h3>افزودن دستی</h3>
-  <input id="historyName" placeholder="نام مشتری">
-  <input id="historyPhone" placeholder="شماره تماس">
-  <input id="historyAmount" placeholder="مبلغ پرداختی" type="number">
-  <input id="historyReason" placeholder="پرداخت بابت">
-  <button onclick="addManualHistory()">ثبت پرداخت</button>
+  <div class="flexStyler">
+    <input id="historyName" placeholder="نام مشتری">
+    <input id="historyPhone" placeholder="شماره تماس">
+    <input id="historyAmount" placeholder="مبلغ پرداختی" type="number">
+    <input id="historyReason" placeholder="پرداخت بابت">
+    <button style="margin-top: 1rem;" onclick="addManualHistory()">ثبت پرداخت</button>
+  </div>
 
   <hr>
 
