Change title and language in index.html
Updated the title and language attributes in the HTML document.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>مدیریت کارگاه RAMCO</title>
+  <title>ShopHub - Shop Management</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://vazir-font.com/font-face.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
