Fix favicon link in index.html
Updated favicon link and corrected its path.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://vazir-font.com/font-face.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="favicon" href="favicon.png"
+  <link rel="icon" href="Assest/Favicon.png" type="image/png">
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </head>
 <body>
@@ -239,4 +239,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
